src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ANCAP_Rating__c</fullName>
        <description>Safety Rating as per ANCAP</description>
        <label>ANCAP</label>
        <picklist>
            <picklistValues>
                <fullName>Unrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Star</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CO_Emissions__c</fullName>
        <label>CO² Emissions (g/km)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Colour_Code__c</fullName>
        <description>Color Code of the vehicle</description>
        <label>Colour Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_del__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this Product currently sold?</description>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Enforce_Product_Level_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows products at any level to be selected on related records</inlineHelpText>
        <label>Do Not Enforce Product Level Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engine_Code__c</fullName>
        <label>Engine Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <description>Engine Size of the vehicle</description>
        <label>Engine</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Capacity__c</fullName>
        <description>Capacity of standard fuel tank (Including reserves)</description>
        <label>Fuel Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Economy_Highway__c</fullName>
        <description>Highway fuel consumption (ADR 81/02 l/100km</description>
        <label>Fuel Economy (Highway)</label>
        <picklist>
            <picklistValues>
                <fullName>0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuel_Economy_Urban__c</fullName>
        <description>Urban fuel consumption (ADR 81/02 l/100km)</description>
        <label>Fuel Economy (Urban)</label>
        <picklist>
            <picklistValues>
                <fullName>0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuel_Economy__c</fullName>
        <description>Combined Highway/Urban fuel consumption (ADR 81/02 l/100km)</description>
        <label>Fuel Economy (Comb)</label>
        <picklist>
            <picklistValues>
                <fullName>0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuel__c</fullName>
        <description>Fuel Type of Vehicle</description>
        <label>Fuel</label>
        <picklist>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Green_Vehicle_Rating__c</fullName>
        <description>Environmental Rating as per Australian Government Green Vehicle Guide</description>
        <label>Green Vehicle Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_Series__c</fullName>
        <label>Model Series</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint__c</fullName>
        <description>Paint type of the vehicle</description>
        <label>Paint</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>Product Id from Nissan Mainframe</description>
        <externalId>true</externalId>
        <label>Product Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reccomended_Fuel__c</fullName>
        <description>NMA Reccomended Fuel Type</description>
        <label>Reccomended Fuel</label>
        <picklist>
            <picklistValues>
                <fullName>ULP 91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULP 95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULP 98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Level__c</fullName>
        <inlineHelpText>Indicated which level in the product hierarchy this product sit</inlineHelpText>
        <label>SFDC Product Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_series__c</fullName>
        <label>Sub Series</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <description>Transmission of the vehicle</description>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVT Auto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>e10_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Capability of vehicles to satisfactorily operate on ethanol Blend petrol.

The Australian Government has limited the level of ethanol in petrol in Australia to a maximum of 10%, or E10. Most new and many older vehicle models can run on ethanol blended petrol.</description>
        <label>e10 Compliant</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>SFDC_Product_Level__c</columns>
        <columns>Model_Series__c</columns>
        <columns>Sub_series__c</columns>
        <columns>Product_Id__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Engine__c</columns>
        <columns>Fuel__c</columns>
        <columns>Transmission__c</columns>
        <columns>Paint__c</columns>
        <columns>ANCAP_Rating__c</columns>
        <columns>Current_del__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>